AWS/SQL Server/main.tf
provider "aws" {
  region = var.region
}

# Create the VPC

resource "aws_vpc" "SCE-VPC" {            
  cidr_block           = var.main_vpc_cidr
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "SCE-VPC"
  }
}

# Create Internet Gateway and attach it to VPC

resource "aws_internet_gateway" "SCE-IGW" {
  vpc_id = aws_vpc.SCE-VPC.id 
  tags = {
    Name = "SCE-IGW"
  }
}

# Create PUBLIC Subnets :

resource "aws_subnet" "SCE-SUBNET1" {
  vpc_id            = aws_vpc.SCE-VPC.id
  cidr_block        = var.public_subnet1
availability_zone = var.availability_zone1
  tags = {
    Name = "SCE-SUBNET1"
  }
}

resource "aws_subnet" "SCE-SUBNET2" {
  vpc_id            = aws_vpc.SCE-VPC.id
  cidr_block        = var.public_subnet2
  availability_zone = var.availability_zone2
  tags = {
    Name = "SCE-SUBNET2"
  }
}

# Create DB subnet group :

resource "aws_db_subnet_group" "SCE-DB-SUBNET-GROUP" {
  name       = "sce-db-subnet-group"
  subnet_ids = ["${aws_subnet.SCE-SUBNET1.id}", "${aws_subnet.SCE-SUBNET2.id}"]
}

#  Create Route table for Public Subnets :

resource "aws_route_table" "SCE-RT" {
  vpc_id = aws_vpc.SCE-VPC.id
  route {
    cidr_block = "0.0.0.0/0" # Traffic from Public Subnet reaches Internet via Internet Gateway
    gateway_id = aws_internet_gateway.SCE-IGW.id
  }
}

# create Route table Association with Public Subnet's

resource "aws_route_table_association" "SCE-RT1-ASSOC" {
  subnet_id      = aws_subnet.SCE-SUBNET1.id
  route_table_id = aws_route_table.SCE-RT.id
}


resource "aws_route_table_association" "SCE-RT2-ASSOC" {
  subnet_id      = aws_subnet.SCE-SUBNET2.id
  route_table_id = aws_route_table.SCE-RT.id
}

# create security group :

resource "aws_security_group" "SCE-MSSQL-SG" {
  name        = "SCE-MSSQL-SG"
  description = "Allow connection to MSSQL port 1433"
  vpc_id      = aws_vpc.SCE-VPC.id

  ingress {
    description = "MSSQL Port"
    from_port   = 1433
    to_port     = 1433
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_db_instance" "SCE-DEMO-MSSQL" {
  identifier             = "sce-demo-mssql"
  allocated_storage      = 20
  max_allocated_storage  = 100
  storage_encrypted      = false
  license_model          = "license-included"
  engine                 = "sqlserver-se"
  engine_version         = "15.00.4043.16.v1"  // https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_SQLServer.html#SQLServer.Concepts.General.VersionSupport
  instance_class         = "db.t3.xlarge"      // https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_SQLServer.html#SQLServer.Concepts.General.InstanceClasses
  username               = "admin"
  password               = "Welcome1"
  vpc_security_group_ids = ["${aws_security_group.SCE-MSSQL-SG.id}"]
  db_subnet_group_name   = aws_db_subnet_group.SCE-DB-SUBNET-GROUP.id
  publicly_accessible    = true
  skip_final_snapshot    = true
  multi_az               = false
}

// Identifier of the mssql DB instance.
output "mssql_id" {
  value = aws_db_instance.SCE-DEMO-MSSQL.id
}

// Address of the mssql DB instance.
output "mssql_address" {
  value = aws_db_instance.SCE-DEMO-MSSQL.address
}
